2009-10-26  Eric Seidel  <eric@webkit.org>

        No review, just adding Mike Belshe to the committers list.

        * Scripts/modules/committers.py:

2009-10-26  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Darin Adler.

        Make .rc files compile on Windows without depending on MFC headers
        https://bugs.webkit.org/show_bug.cgi?id=30750

        * DumpRenderTree/win/TestNetscapePlugin/TestNetscapePlugin.rc: Use
        windows.h instead of afxres.h because it exists even when MFC is not 
        installed, and is all that's needed here.

        * FindSafari/FindSafari.rc: Ditto

2009-10-24  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        bugzilla-tool post-diff should know how to mark commit-queue=?
        https://bugs.webkit.org/show_bug.cgi?id=29202

        * Scripts/bugzilla-tool:
         - Add --commit-queue option to post-diff, post-commits and create-bug.
        * Scripts/modules/bugzilla.py:
         - Added support for --commit-queue to add_patch_to_bug and create_bug_with_patch.
         - Added _fill_attachment_form to share code between add_patch_to_bug and create_bug_with_patch.

2009-10-23  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        bugzilla-tool commit-queue does not notice modifications to committers.py
        https://bugs.webkit.org/show_bug.cgi?id=30084

        * Scripts/bugzilla-tool:
         - Make commit-queue re-exec itself instead of using while(1).
         - Add a --is-relaunch parameter to commit-queue to bypass initialization on re-launch.
         - Add a _next_patch() method which calls exec() (and could eventually call update-webkit too).

2009-10-22  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        commit-queue will get stuck on patches if land-patches terminates unexpectedly
        https://bugs.webkit.org/show_bug.cgi?id=30634

        * Scripts/bugzilla-tool: